<resources>
    <string name="app_name">Photo Gallery</string>
    <string name="start_button">Comenzar</string>
    <string name="albums_title">Albums</string>
    <string name="photos_title">Fotos</string>
    <string name="retry_button">Volver a intentar</string>
    <string name="refresh_button">Refrescar información</string>
    <string name="back_button">Ir atrás</string>
    <string name="menu_button">Desplegar menu</string>
    <string name="dark_mode_button">Modo oscuro</string>
    <string name="light_mode_button">Modo claro</string>
    <string name="empty_albums">No se encontraron albums.</string>
    <string name="empty_photos">No se encontraron fotos.</string>
    <string name="search_label">Buscar</string>
</resources>